typeveld krijgt foxus